--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,9 @@
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="choose_difficulty_txt">Choose Difficulty</string>
     <string name="choose_gamemode_txt">Choose Gamemode</string>
+    <string name="colors_gamemode">Colors</string>
+    <string name="icons_gamemode">Icons</string>
+    <string name="please_wait">Please wait!</string>
+    <string name="testicongamemode">TestIconGamemode</string>
+    <string name="try_icons_gamemode">Try Icons!</string>
 </resources>
