--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="please_wait">Please wait!</string>
     <string name="testicongamemode">TestIconGamemode</string>
     <string name="try_icons_gamemode">Try Icons!</string>
+    <!--Google Ads_ID-->
+    <string name="banner_ad_unit_id">ca-app-pub-4970672389873444/3568885213</string>
 </resources>
