--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,6 @@
     <string name="new_game_button_txt">New Game</string>
     <string name="scores_button_txt">Scores</string>
     <string name="player_name_txt">Player 1</string>
-    <string name="test_txt">HI there!</string>
-
     <string name="title_activity_gamemode">gamemodeActivity</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
@@ -15,7 +13,8 @@
     <string name="icons_gamemode">Icons</string>
     <string name="please_wait">Please wait!</string>
     <string name="testicongamemode">TestIconGamemode</string>
-    <string name="try_icons_gamemode">Try Icons!</string>
+    <string name="try_icons_gamemode">Buy Food!</string>
     <!--Google Ads_ID-->
     <string name="banner_ad_unit_id">ca-app-pub-4970672389873444/3568885213</string>
+    <string name="pokemons">Pokemons</string>
 </resources>
